--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "version": "0.6.13",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build"
   },
   "keywords": [
     "zircle",
@@ -18,19 +17,19 @@
   ],
   "dependencies": {
     "animejs": "^2.2.0",
-    "axios": "^0.18.0",
+    "axios": "0.27.2",
     "js-search": "^1.4.2",
-    "moment": "^2.23.0",
+    "moment": "2.29.4",
     "moment-duration-format": "^2.2.2",
-    "vue": "^2.5.21",
-    "zircle": "^1.2.1"
+    "vue": "2.7.8",
+    "zircle": "^1.2.5"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.2.2",
-    "@vue/cli-plugin-eslint": "^3.2.2",
-    "@vue/cli-service": "^3.2.3",
-    "@vue/eslint-config-standard": "^3.0.5",
-    "vue-template-compiler": "^2.5.21"
+    "@babel/eslint-parser": "^7.18.9",
+    "@vue/cli-plugin-babel": "5.0.8",
+    "@vue/cli-service": "5.0.8",
+    "@vue/eslint-config-standard": "8.0.1",
+    "vue-template-compiler": "2.7.8"
   },
   "repository": {
     "type": "git",
